--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,9 @@
 version: "3.7"
 services:
-
   proxy:
     build:
-      context: .
-      dockerfile: Dockerfile-proxy
+      context: ./envoy-proxy/
+      dockerfile: Dockerfile
     networks:
       - envoymesh
     ports:
@@ -12,8 +11,8 @@ services:
 
   web_service:
     build:
-      context: .
-      dockerfile: Dockerfile-web-service
+      context: ./web-server/
+      dockerfile: Dockerfile
     networks:
       - envoymesh
     ports:
